# agent-template

./: .gitignore  README.md  USAGE_GUIDE.md
example/: multi_agent.py  single_agent.py  tool_integretion_agent.py
src/: .env.example  app.py  mcp_config.json  pyproject.toml
src/agent/: __init__.py
src/agent/core/: agent_factory.py  base_agent.py  llm_factory.py
src/agent/tools/: mcp_client.py  tool_manager.py
src/agent/types/: __init__.py  agent_types.py
src/agent/utils/: config_loader.py
src/config/: config_manager.py  env.py
